messages receieved in websocket if chat is not open by online user

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
       <a
         id="logout"
         href="/"
-        onclick = "Logout() ;"
+        onclick="Logout() ;"
         class="nav__link"
         style="display: none"
         data-link
@@ -65,20 +65,20 @@
 
     <!-- Users list -->
     <nav class="loggedInUsers">
-        <a id="Select User" class="loggedInUsers__link"><strong>Chat Members</strong></a
-        >
-        <div id="usersLog">
-          <!--<div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
+      <a id="Select User" class="loggedInUsers__link"
+        ><strong>Chat Members</strong></a
+      >
+      <div id="usersLog">
+        <!--<div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
               <div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Duke Oton</a></div>-->
-        </div>
-      </nav>
-
+      </div>
+    </nav>
 
     <!--chat modal ui-->
     <div class="chat-private" id="chat-private">
-      <div class="chat-modal" class="modal">
-        <!-- <div class="modal-content animate" action="/chat" id="formChat"> -->
-          <div class="chat-title-box">
+      <!-- <div class="chat-modal" class="modal"> -->
+      <!-- <div class="modal-content animate" action="/chat" id="formChat"> -->
+      <!-- <div class="chat-title-box">
             <button type="close-msg" class="message-close" id="btn" value="closeBtn" onclick="ChatReturn()"></button>
             <h2 class="chat-title" id="recipient"></h2>
          </div>
@@ -96,13 +96,10 @@
               Send
             </button>
           </div>
-        </div>
-      </div>
-    
+        </div> -->
+    </div>
 
-    
-
-<!-- 
+    <!-- 
 ===========================================================================================================
                                     CREATE POST BLOCK                                                       
 ===========================================================================================================
@@ -152,7 +149,7 @@
  -->
     <div id="loginModal" class="modal">
       <div class="modal-content animate">
-        <form id="loginform" class="form" action="/" >
+        <form id="loginform" class="form" action="/">
           <div class="imgcontainer">
             <img
               src="/css/img/user-group-man-woman.png"
@@ -424,14 +421,12 @@
 
     <!--<script src='/js/Login.js'></script>-->
     <!--Adding JS for the chat here as js/chat.js not working-->
-    <script type="text/javascript">
-
-    </script>
+    <script type="text/javascript"></script>
   </body>
 
   <script src="/js/post.js"></script>
   <script src="/js/register.js"></script>
-  <script src="/js/login.js"></script>
+  <script  src="/js/login.js"></script>
   <script src="/js/buttons.js"></script>
   <!--<script src="/js/chat.js"></script>-->
 </html>
