--- a/templates/home.html
+++ b/templates/home.html
@@ -15,9 +15,14 @@
       src="https://kit.fontawesome.com/3c167d6bd6.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
+    />
   </head>
 
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <div id="Header">🅡🅔🅐🅛-🅣🅘🅜🅔-🅕🅞🅡🅤🅜</div>
 
     <!-- 
@@ -426,7 +431,7 @@
 
   <script src="/js/post.js"></script>
   <script src="/js/register.js"></script>
-  <script  src="/js/login.js"></script>
+  <script src="/js/login.js"></script>
   <script src="/js/buttons.js"></script>
   <!--<script src="/js/chat.js"></script>-->
 </html>
