--- a/css/home.css
+++ b/css/home.css
@@ -749,16 +749,19 @@ font-weight: bolder;
 /* --------------------------------------------------------- */
 
 
+
 /* css for chat */
 #log {
-  margin: 0;
-  padding: 0.5em 0.5em 0.5em 0.5em;
-  position: absolute;
-  top: 2em;
-  left: -5.4%;
-  right: -6%;
+  margin-left: 77.8%;
+  padding: 2.5em 0.5em 0.5em 0.5em;
+  position: fixed;
+  top: 5%;
+  left: 0.17%;
+  right: -5%;
   bottom: 3em;
   overflow-y: scroll;
+  margin-right: 3%;
+  z-index: 4;
 }
 
 #formChat {
@@ -777,6 +780,9 @@ font-weight: bolder;
     color: blue;
     background-color: #8EC3B0;
     border-color: #8EC3B0;
+    position: fixed;
+    z-index: 4;
+    margin-bottom: 62px;
 }
 
 #msg:focus{
@@ -859,135 +865,141 @@ font-weight: bolder;
 /*==========================
  regform control validation 
  ===========================*/
- .reg-form-control {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
-    position: relative;
-  }
-  .reg-form-control label {
-    display: inline-block;
-    margin-bottom: 5px;
-  }
-  .reg-form-control input {
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    display: block;
-    width: 100%;
-    font-size: 14px;
-    padding: 10px;
-  }
-  .reg-form-control i {
-    visibility: hidden;
-    position: absolute;
-    top: 40px;
-    right: 10px;
-  }
-  .reg-form-control.success i.fa-circle-check {
-    visibility: visible;
-    color: #2ecc71;
-  }
-  .reg-form-control.error i.fa-exclamation {
-    visibility: visible;
-    color: #e74c3c;
-  }
-  .reg-form-control.pwshow i.fa-eye-slash {
-    visibility: visible;
-    color: #3936eb;
-  }
-  .reg-form-control small {
-    visibility: hidden;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: #e74c3c;
-  }
-  .reg-form-control.success input {
-    border-color: #2ecc71;
-  }
-  .reg-form-control.error input {
-    border-color: #e74c3c;
-  }
-  .reg-form-control.error small {
-    visibility: visible;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: #e74c3c;
-    font-weight: 1000;
-    font-size: 1.1rem;
-  }
-  .login-form-control {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
-    position: relative;
-  }
-  .login-form-control label {
-    display: inline-block;
-    margin-bottom: 5px;
-    padding-left: 1%;
-  }
-  .login-form-control input {
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    display: block;
-    width: 100%;
-    font-size: 14px;
-    padding: 10px;
-  }
-  .login-form-control i {
-    visibility: hidden;
-    position: absolute;
-    top: 40px;
-    right: 10px;
-  }
-  .login-form-control.success i.fa-circle-check {
-    visibility: visible;
-    color: #2ecc71;
-  }
-  .login-form-control.error i.fa-exclamation {
-    visibility: visible;
-    color: #e74c3c;
-  }
-  .login-form-control.pwshow i.fa-eye-slash {
-    visibility: visible;
-    color: #3936eb;
-  }
-  .login-form-control small {
-    visibility: hidden;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: #e74c3c;
-    font-weight: 1000;
-    font-size: 1.1rem;
-  }
-  .login-form-control.success input {
-    border-color: #2ecc71;
-  }
-  .login-form-control.error input {
-    border-color: #e74c3c;
-  }
-  .login-form-control.error small {
-    visibility: visible;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: #e74c3c;
-  }
+ 
+.reg-form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+.reg-form-control label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.reg-form-control input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  font-size: 14px;
+  padding: 10px;
+}
+.reg-form-control i {
+  visibility: hidden;
+  position: absolute;
+  top: 40px;
+  right: 10px;
+}
+.reg-form-control.success i.fa-circle-check {
+  visibility: visible;
+  color: #2ecc71;
+}
+.reg-form-control.error i.fa-exclamation {
+  visibility: visible;
+  color: #e74c3c;
+}
+.reg-form-control.pwshow i.fa-eye-slash {
+  visibility: visible;
+  color: #3936eb;
+}
+.reg-form-control small {
+  visibility: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #e74c3c;
+}
+.reg-form-control.success input {
+  border-color: #2ecc71;
+}
+.reg-form-control.error input {
+  border-color: #e74c3c;
+}
+.reg-form-control.error small {
+  visibility: visible;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #e74c3c;
+}
+.login-form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+.login-form-control label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.login-form-control input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  font-size: 14px;
+  padding: 10px;
+}
+.login-form-control i {
+  visibility: hidden;
+  position: absolute;
+  top: 40px;
+  right: 10px;
+}
+.login-form-control.success i.fa-circle-check {
+  visibility: visible;
+  color: #2ecc71;
+}
+.login-form-control.error i.fa-exclamation {
+  visibility: visible;
+  color: #e74c3c;
+}
+.login-form-control.pwshow i.fa-eye-slash {
+  visibility: visible;
+  color: #3936eb;
+}
+.login-form-control small {
+  visibility: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #e74c3c;
+}
+.login-form-control.success input {
+  border-color: #2ecc71;
+}
+.login-form-control.error input {
+  border-color: #e74c3c;
+}
+.login-form-control.error small {
+  visibility: visible;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #e74c3c;
+}
+#current-user {
+  text-transform: uppercase;
+}
 
-
-  *--------------------
+/*~~~~~~~~~~~~~~~End of Logged-in Users Log~~~~~~~~~~~~*/
+/*
+    =================================================
+                CHAT CSS
+    =================================================
+  */
+/*--------------------
 Chat
 --------------------*/
-
 .chat-private {
-  position: fixed;
-  right: 0%;
-  transform: translate(-50%, -50%);
-  width: 300px;
+  position: absolute;
+  top: 6%;
+  left: 78%;
+  right: 87px;
+  /* transform: translate(-50%, -50%); */
+  width: 22%;
   height: 95vh;
-  z-index: 4;
-  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  overflow: hidden;
+  box-shadow: 0 5px 30px rgb(0 0 0 / 20%);
   background: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   display: flex;
@@ -999,48 +1011,42 @@ Chat
   Chat Title
   --------------------*/
 .chat-title-box {
-  flex: 0 1 28px;
+  flex: 0 1 45px;
   position: relative;
+  z-index: 2;
   background: rgba(0, 0, 0, 0.2);
   color: #fff;
   text-transform: uppercase;
   text-align: center;
-  padding: 3px 0px 0px 49px;
+  padding: 10px 10px 10px 50px;
 }
 .message-close {
-  position: fixed;
+  position: absolute;
+  z-index: 5;
+  top: 91%;
+  left: 0px;
   color: #fff;
-  background: #eeeeee;
+  border: none;
+  background: #248a52;
   background-image: url(/css/img/icons8-back-arrow-48.png);
-  background-size: 95%;
-  padding: 16px 17px;
-  height: 2.4%;
-  width: 2%;
-  margin-top: 0.615%;
-  margin-left: -4px;
-  border-radius: 25px;
+  background-size: 100%;
+  line-height: 1;
+  padding: 20px 20px;
+  margin-left: 2px;
+  border-radius: 10px;
 }
 .chat-title {
   flex: 0 1 45px;
-  position: fixed;
-  margin: 0;
-  padding: 0;
-}
-
-.chat-title#recipient{
-  color: aqua;
-  font-weight: bolder;
-  font-size: 1.5rem;
-  background-color: rgb(0 0 139);
-  margin-left: -3.6%;
-  padding-left: 1.85%;
-  padding-right: 4.8%;
-  margin-top: -2%;
-  padding-top: 0.4%;
-  border-radius: -18%;
-  padding-bottom: 0.4%;
-  margin-right: 0%;
-
+  position: relative;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.2);
+  color: rgb(77, 209, 221);
+  text-transform: uppercase;
+  text-align: left;
+  padding: 29px 11px 4px 53px;
+  margin: -42px;
+  padding-top: 56px;
+  font-size: 2rem;
 }
 /*--------------------
   Messages
@@ -1048,26 +1054,33 @@ Chat
 .messages {
   flex: 1 1 auto;
   color: rgba(255, 255, 255, 0.5);
+  overflow: auto;
   position: relative;
-
 }
 .messages-content {
   display: flex;
   flex-direction: column;
-  height: 621px;
+  height: 600px;
+  overflow-y: scroll;
   clear: both;
-  padding: 6px 10px 7px;
+  FONT-VARIANT: JIS04;
   border-radius: 10px 10px 10px 0;
-  background: rgba(2, 25, 119, 0.941);
-  margin: 8px 0;
-  font-size: 11px;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 0.4em;
+  line-height: 1.2;
   position: relative;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.344);
-  border-radius: 25px;
-  line-height: 103.5%;
-
+  text-shadow: 0 1px 1px rgb(0 0 0 / 20%);
+  margin-right: 0;
+  padding-right: -4%;
+  padding-left: 1%;
+  width: 102%;
+  padding-top: 12%;
+  padding-bottom: 9%;
 }
 .messages-content .sender {
+  /* display: flex;
+  flex-direction: row;
+  justify-content: flex-end; */
   float: right;
   color: #fff;
   text-align: left;
@@ -1076,29 +1089,23 @@ Chat
   width: max-content;
   padding: 7px;
   height: 20px;
-  line-height: 87%;
   margin-bottom: 5px;
-  font-size: 130%;
-
+  font-size: 1.8em;
 }
 .messages-content .recipient {
-  float: right;
+  width: max-content;
   color: #fff;
   text-align: left;
   background: linear-gradient(120deg, #248a52, #257287);
-  border-radius: 10px 10px 10px 0px;
-  width: max-content;
-  padding: 7px;
-  height: 20px;
-  line-height: 87%;
+  border-radius: 10px 10px 10px 0;
   margin-bottom: 5px;
-  font-size: 130%;
-
+  padding: 5px;
+  font-size: 1.8em;
 }
 .dateDiv {
   font-size: x-small;
   color: greenyellow;
-
+  font-size: 0.65em;
 }
 .messageWrapper {
   display: flex;
@@ -1108,45 +1115,57 @@ Chat
   padding: 7px;
   padding-bottom: 5px;
   height: 20px;
-
+}
+/* .onlineUser {
+  color: rgb(148, 221, 37);
+  font-weight: bolder;
+  text-transform: uppercase;
+  text-align: justify;
+}
+.offlineUser {
+  color: gray;
+  text-transform: uppercase;
+  text-align: justify;
+} */
+.notification {
+  background-image: url("/css/img/newmessage.png");
+  background-repeat: no-repeat;
+  background-position: 10%;
+  background-color: blue;
 }
 /*--------------------
   Message Box
   --------------------*/
 .message-box {
   flex: 0 1 40px;
-  width: 100%;
+  width: 93%;
   background: rgba(0, 0, 0, 0.3);
-  padding: 0;
+  padding: -6px;
   position: absolute;
-  right: -3%;
-  bottom: 3%;
+  bottom: 0;
+  left: 42px;
+  top: 90%;
 }
-
 .message-box .message-input {
-  background: none;
-  border: none;
-  outline: none !important;
-  resize: none;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 11px;
-  height: 27px;
-  margin: 0;
-  padding-right: 20px;
-  width: 265px;
-  margin-bottom: -1%;
-}
+  background: rgb(9 9 9);
+  color: rgb(248, 248, 252);
+  height: 34px;
+  width: 94%;
+  z-index: 5;
+  position: relative;
+  font-family: cursive;
+  font-weight: bold;
+  top: 6px;
 
+}
 .message-box textarea:focus:-webkit-placeholder {
   color: transparent;
-
 }
-
 .message-box .message-submit {
   position: absolute;
-  z-index: 1;
-  top: 39%;
-  right: 6%;
+  z-index: 5;
+  top: 14px;
+  right: 26px;
   color: #fff;
   border: none;
   background: #248a52;
@@ -1156,16 +1175,27 @@ Chat
   padding: 6px 10px;
   border-radius: 10px;
   outline: none !important;
-  transition: background 0.2s ease;
+  box-shadow: 1px 1px 23px 8px white;
+  font-family: cursive;
+  font-weight: bold;
 }
-
 .message-box .message-submit:hover {
-  background: #54f954;
+  position: absolute;
+  z-index: 5;
+  top: 14px;
+  right: 26px;
   color: blueviolet;
-}
-
-input#msg{
-  margin-left: 10%;
+  border: none;
+  background: #74ec2e;
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  box-shadow: 1px 1px 23px 8px white;
+  font-family: cursive;
+  font-weight: bold;
 }
 /*--------------------
   Bounce
