--- a/css/home.css
+++ b/css/home.css
@@ -996,7 +996,7 @@ Chat
   right: 87px;
   /* transform: translate(-50%, -50%); */
   width: 22%;
-  height: 95vh;
+  height: 62%;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgb(0 0 0 / 20%);
@@ -1060,7 +1060,7 @@ Chat
 .messages-content {
   display: flex;
   flex-direction: column;
-  height: 600px;
+  height: 322px;
   overflow-y: scroll;
   clear: both;
   FONT-VARIANT: JIS04;
@@ -1073,7 +1073,7 @@ Chat
   margin-right: 0;
   padding-right: -4%;
   padding-left: 1%;
-  width: 102%;
+  width: 98%;
   padding-top: 12%;
   padding-bottom: 9%;
 }
